--- a/sarahhkeast_portfolio/src/styles/pages/project-page.scss
+++ b/sarahhkeast_portfolio/src/styles/pages/project-page.scss
@@ -236,7 +236,7 @@
         margin-top: 120px;
         align-items: center;
         width: 50%;
-        z-index: 3; 
+        z-index: 2; 
         @media (max-width: $breakpoint-tablet) {
             margin-top: 56px;
         }
@@ -269,6 +269,9 @@
     &__banner-image {
         @media (max-width: $breakpoint-tablet) {
             display: none;
+        }
+        @media (min-width: $breakpoint-tablet) {
+            max-width: 200%;
         }
     }
 
